# hcc

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  index.html  style.css  test.sh
lib/: Array.jack  Keyboard.jack  Math.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
src/: AsmCommand.h  AsmLogic.cpp  AsmLogic.h  AsmParser.cpp  AsmParser.h  Assembler.cpp  Assembler.h  CMakeLists.txt  CPU.cc  CPU.cpp  CPU.h  JackAST.h  JackParser.cc  JackParser.cpp  JackParser.h  JackParserCallback.cpp  JackParserCallback.h  JackTokenizer.cc  JackTokenizer.cpp  JackTokenizer.h  JackVMWriter.cc  JackVMWriter.cpp  JackVMWriter.h  Makefile  ParserAsm.cpp  ParserAsm.h  ParserVM.cc  ParserVM.cpp  ParserVM.h  ROM.h  StageConnect.cpp  StageConnect.h  StringTable.cpp  StringTable.h  SymbolTable.cpp  SymbolTable.h  VMCommand.cc  VMCommand.cpp  VMCommand.h  VMOptimize.cc  (+79 more)
src/hcc/assembler/: asm.cc  asm.h  asm.local.cc
src/hcc/cpu/: cpu.cc  cpu.h  instruction.cc  instruction.h
src/hcc/jack/: ast.cc  ast.h  parser.cc  parser.h  tokenizer.cc  tokenizer.h  tokenizer.token_type.cc  vm_writer.cc  vm_writer.h
src/hcc/ssa/: interference_graph.cc  interference_graph.h  interference_graph.test.cc  ssa.asm_writer.cc  ssa.cc  ssa.construction.cc  ssa.copy_propagation.cc  ssa.dead_code_elimination.cc  ssa.deconstruction.cc  ssa.h  ssa.jack_reader.cc  ssa.reader.cc  ssa.register_allocation.cc  ssa.writer.cc  subroutine_builder.cc  subroutine_builder.h  tokenizer.cc  tokenizer.h
src/hcc/util/: graph.cc  graph.h  graph.test.cc  graph_dominance.cc  graph_dominance.h  index_table.cc  index_table.h
src/hcc/vm/: command.cc  command.h  optimize.cc  optimize.h  parser.cc  parser.h  writer.cc  writer.h
src/stdlib/: Array.jack  Keyboard.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
src/test/: Makefile  test_graph.cc
test/: Makefile  genmake.sh
test/test-00-bootstrap/: Makefile  Sys.vm  compare
test/test-01-stack/: Makefile  Sys.vm  compare
test/test-03-pointer/: Makefile  Sys.vm  compare
test/test-04-static/: Makefile  Sys.vm  compare
test/test-98-FibonacciElement/: Makefile  compare
test/test-99-StaticsTest/: Makefile  compare
test/test-ld-000-basic/: Makefile
test/test-ssa2asm-00-store_imm/: Sys.jack
test/test-ssa2asm-01-subroutine/: Sys.jack
test/test-ssa2asm-02-arithmetic/: Makefile  Sys.jack  compare
test/test-ssa2asm-03-branching/: Makefile  Sys.jack
test/test-ssa2asm-04-arguments/: Sys.jack  compare
tests/: CMakeLists.txt  test_jack_tokenizer.cc  test_ssa_integration.cc  test_ssa_tokenizer.cc  test_vm_integration.cc
tools/: build.sh  generate_include_graph.sh
